--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
 </head>
 <body>
   <header class="topbar">
-    <div class="brand">Thailander</div>
     <nav class="nav">
       <a href="#recommendations">Recommendations</a>
       <a href="#starters">Starters</a>
-      <a href="#mains">Main Dishes</a>
+      <a href="#mains">Mains</a>
       <a href="#desserts">Desserts</a>
     </nav>
   </header>
@@ -46,15 +45,15 @@
     </section>
 
     <section id="mains" class="section">
-      <h2>Main Dishes</h2>
+      <h2>Mains</h2>
       <figure class="menu-page">
-        <img src="./images/05.png" alt="Main dishes — page 1" loading="lazy" />
+        <img src="./images/05.png" alt="Mains — page 1" loading="lazy" />
       </figure>
       <figure class="menu-page">
-        <img src="./images/06.png" alt="Main dishes — page 2" loading="lazy" />
+        <img src="./images/06.png" alt="Mains — page 2" loading="lazy" />
       </figure>
       <figure class="menu-page">
-        <img src="./images/07.png" alt="Main dishes — page 3" loading="lazy" />
+        <img src="./images/07.png" alt="Mains — page 3" loading="lazy" />
       </figure>
     </section>
 
