--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   <meta name="theme-color" content="#101010" />
   <link rel="apple-touch-icon" href="./icons/app-icon-192.png">
   <link rel="preload" href="./images/01.png" as="image" />
-  <link rel="stylesheet" href="./styles.css" />
-  <script defer src="./script.js"></script>
+  <!-- cache-busting query strings -->
+  <link rel="stylesheet" href="./styles.css?v=3" />
+  <script defer src="./script.js?v=3"></script>
 </head>
 <body>
   <header class="topbar">
